added image error detection
will fill with purple and black if an image cannot be loaded