@@ -22,20 +22,18 @@ public class Sound {
     static AudioClip clip;
 
     public static void loadSound() {
-        File file = new File("src//Sounds//WW.wav");
-        URL url = null;
-        if (file.canRead()) {
-            try {
-                url = file.toURI().toURL();
-            } catch (MalformedURLException ex) {
-                Logger.getLogger(Sound.class.getName()).log(Level.SEVERE, null, ex);
-            }
-        }
-        System.out.println(url);
-        clip = Applet.newAudioClip(url);
+//        URL url = null;
+//        try {
+//            url = new URL("/Sounds/WW.wav");
+//        } catch (MalformedURLException ex) {
+//            Logger.getLogger(Sound.class.getName()).log(Level.SEVERE, null, ex);
+//        }
+//
+//        System.out.println(url);
+//        clip = Applet.newAudioClip(url);
     }
 
     public static void playSound() {
-        clip.play();
+        //clip.play();
     }
 }
